refactor: centralize timezone and date parsing logic into MarketTimeUtils to fix double shift bug